[package]
name = "nebo-sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for building Nebo apps"
license = "MIT"
repository = "https://github.com/NeboLoop/nebo-sdk-rust"
keywords = ["nebo", "grpc", "agent", "sdk"]

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.13"

[[example]]
name = "calculator"
path = "examples/calculator.rs"
